--- a/Mufashe/css/style.css
+++ b/Mufashe/css/style.css
@@ -365,6 +365,9 @@ body.dark-theme .footer-bottom {
   border-radius: 5px;
   font-weight: 500;
 }
+.success-stories .stories-grid .story-card .story-social button a {
+  text-decoration: none;
+}
 .success-stories .stories-grid .story-card .story-social button i {
   margin-right: 5px;
 }
@@ -975,6 +978,7 @@ body.dark-theme .footer-bottom {
   grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
   gap: 2rem;
   margin-bottom: 3rem;
+  margin-top: 6rem;
 }
 .how-it-works .steps-container .step-card {
   background: white;
@@ -993,7 +997,7 @@ body.dark-theme .footer-bottom {
 }
 .how-it-works .steps-container .step-card .step-number {
   position: absolute;
-  top: -20px;
+  top: 0.5px;
   left: 50%;
   transform: translateX(-50%);
   width: 40px;
